fix: update caution text color for better visibility Close #10

--- a/portfolio/src/app/main-content/projekts/project-card/project-card.component.scss
+++ b/portfolio/src/app/main-content/projekts/project-card/project-card.component.scss
@@ -50,7 +50,7 @@
 }
 
 .caution-text {
-  color: #ff0000b2;
+  color: #ffd600b2;
 }
 
 .btn {
